Import asciinema files

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -12,6 +12,10 @@
 
     <!-- Theme used for syntax highlighted code -->
     <link rel="stylesheet" href="../plugin/highlight/monokai.css" id="highlight-theme">
+
+    <!-- asciinema -->
+    <link rel="stylesheet" href="../asciinema/asciinema-player.css">
+
     <style>
         .local-grid {
             display: grid;
@@ -141,5 +145,8 @@
         plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealAceBrython ]
       });
     </script>
+
+   <!-- asciinema -->
+    <script src="../asciinema/asciinema-player.js"></script>
   </body>
 </html>
