Move "main" script to main.js

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -134,19 +134,7 @@
     <script src="../plugin/markdown/markdown.js"></script>
     <script src="../plugin/highlight/highlight.js"></script>
     <script src="../plugin/revealjs-ace-brython/dist/main.js"></script>
-    <script>
-      // More info about initialization & config:
-      // - https://revealjs.com/initialization/
-      // - https://revealjs.com/config/
-      Reveal.initialize({
-        hash: true,
-
-        // Learn about plugins: https://revealjs.com/plugins/
-        plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealAceBrython ]
-      });
-    </script>
-
-   <!-- asciinema -->
     <script src="../asciinema/asciinema-player.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
