--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../asciinema/asciinema-player.css">
 
     <style>
-        .local-grid {
+        .reveal .local-grid {
             display: grid;
             grid-auto-flow: column;
             gap: 1em;
@@ -27,10 +27,23 @@
             justify-content: center;
         }
 
+        .reveal .local-standout-box {
+            position: absolute;
+            z-index: 1;
+            right: 1em;
+            transform: rotate(-10deg);
+            background-color: var(--selection-background-color);
+            color: var(--selection-color);
+            outline: 1px solid transparent;
+            padding: 1ex;
+            box-shadow: .5ex .5ex .2ex rgba(0, 0, 0, .3);
+            border-radius: .2ex;
+        }
+
         .ace-brython {
             font-size: .7em;
             min-width: 50%;
-            height: 20em
+            height: 3em
         }
     </style>
   </head>
