--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -133,10 +133,43 @@
         <section data-auto-animate>
             <h1 class='r-fit-text'>Vamos escrever nosso primeiro programa!</h1>
 
-            <div class='ace-brython'>
-                <script type='text/x.ace-brython' data-id='x'>
+            <div class='ace-brython' data-readonly data-components='code' style='z-index: 0; position: relative; height: 3em;'>
+                <script type='text/x.ace-brython'>
                     print('hello world')
                 </script>
+            </div>
+            <h5 class='fragment local-standout-box'>
+                Como podemos executar este código?
+            </h5>
+        </section>
+        <section data-auto-animate>
+            <h1 class='r-fit-text'>Invocando o intepretador!</h1>
+            <div style='display: flex; justify-content: center;'>
+                <div>
+                    <img src='stickman-worship.png' style='height: 6em; vertical-align: bottom; margin-top: 3em;'/>
+                    <img src='python-logo-3d.png' style='vertical-align: top; height: 7.5em; margin-top: 0;'/>
+                </div>
+            </div>
+        </section>
+        <section data-auto-animate>
+            <h1 class='r-fit-text'>Invocando o intepretador!</h1>
+            <div style='display: flex; justify-content: center;'>
+                <div style='flex: none;'>
+                    <img src='stickman-worship.png' style='height: 4em; vertical-align: bottom; margin-top: 2em;'/>
+                    <img src='python-logo-3d.png' style='vertical-align: top; height: 5em; margin-top: 0;'/>
+                </div>
+                <div style='margin-right: auto;'>
+                    Usando o shell do seu sistema, podemos utilizar o seguinte
+                    comando: <code>python hello.py</code>
+                    <asciinema-player
+                        src='python-hello.cast'
+                        autoplay
+                        loop
+                        rows='3'
+                        cols='20'
+                        font-size='1em'
+                    />
+                </div>
             </div>
         </section>
       </div>
