Implement and use reusable.js

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -181,6 +181,7 @@
     <script src="../plugin/highlight/highlight.js"></script>
     <script src="../plugin/revealjs-ace-brython/dist/main.js"></script>
     <script src="../asciinema/asciinema-player.js"></script>
+    <script src="reusable.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
