--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -147,34 +147,47 @@
             </h5>
         </section>
         <section data-auto-animate>
-            <template data-reusable>
-                <h1 class='r-fit-text'>Invocando o intepretador!</h1>
-                <div style='display: flex; justify-content: center;'>
-                    <div style='flex: none'>
-                        <img src='stickman-worship.png' style='height: 6em; vertical-align: bottom; margin-top: 3em;'/>
-                        <img src='python-logo-3d.png' style='vertical-align: top; height: 7.5em; margin-top: 0;'/>
-                    </div>
-                    <div data-reusable-name='using-shell' style='margin-right: auto; display: none;'>
-                        Usando o shell do seu sistema, podemos utilizar o seguinte
-                        comando: <code>python hello.py</code>
-                        <asciinema-player
-                            src='python-hello.cast'
-                            autoplay
-                            loop
-                            rows='3'
-                            cols='20'
-                            font-size='1em'
-                        />
-                    </div>
+            <h1 class='r-fit-text'>Invocando o intepretador!</h1>
+            <div style='display: flex; justify-content: center;'>
+                <div style='flex: none'>
+                    <img
+                        src='stickman-worship.png'
+                        style='height: 6em; vertical-align: bottom; margin-top: 3em;'
+                    />
+                    <img
+                        src='python-logo-3d.png'
+                        style='vertical-align: top; height: 7.5em; margin-top: 0;'
+                    />
                 </div>
-            </template>
-            <template data-reuse></template>
+            </div>
         </section>
 
         <section data-auto-animate>
-            <template data-reuse><script>
-                $reuse('using-shell').style.display = ''
-            </script></template>
+            <h1 class='r-fit-text'>Invocando o intepretador!</h1>
+            <div style='display: flex; justify-content: center;'>
+                <div style='flex: none'>
+                    <img
+                        src='stickman-worship.png'
+                        style='height: 6em; vertical-align: bottom; margin-top: 3em;'
+                    />
+                    <img
+                        src='python-logo-3d.png'
+                        style='vertical-align: top; height: 7.5em; margin-top: 0;'
+                    />
+                </div>
+                <div style='margin-right: auto;'>
+                    Usando o shell do seu sistema, podemos utilizar o seguinte
+                    comando: <code>python hello.py</code>
+                    <asciinema-player
+                        src='python-hello.cast'
+                        autoplay
+                        loop
+                        rows='3'
+                        cols='20'
+                        font-size='1em'
+                    />
+                </div>
+            </div>
         </section>
 
         <section>
@@ -247,7 +260,6 @@
     <script src="../plugin/highlight/highlight.js"></script>
     <script src="../plugin/revealjs-ace-brython/dist/main.js"></script>
     <script src="../asciinema/asciinema-player.js"></script>
-    <script src="reusable.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
