Use local-glowing animation

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -196,7 +196,12 @@
                     />
                     <img
                         src='python-logo-3d.png'
-                        style='vertical-align: top; height: 7.5em; margin-top: 0;'
+                        style='
+                            vertical-align: top;
+                            height: 7.5em;
+                            margin-top: 0;
+                            animation: local-glowing 3s infinite ease-in-out;
+                            '
                     />
                 </div>
             </div>
@@ -211,7 +216,12 @@
                     />
                     <img
                         src='python-logo-3d.png'
-                        style='vertical-align: top; height: 7.5em; margin-top: 0;'
+                        style='
+                            vertical-align: top;
+                            height: 7.5em;
+                            margin-top: 0;
+                            animation: local-glowing 3s infinite ease-in-out;
+                            '
                     />
                 </div>
                 <div style='margin-right: auto;'>
