--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -304,6 +304,37 @@
 
 
 
+        <section data-auto-animate>
+            <h1 class='r-fit-text'>
+                Podemos também rodar códigos diretamente nesta apresentação!
+                <span
+                    style='
+                        animation: local-back-and-forth .6s infinite;
+                        display: inline-block;'
+                >🙂</span>
+            </h1>
+        </section>
+        <section data-auto-animate>
+            <h1 class='r-fit-text'>
+                Podemos também rodar códigos diretamente nesta apresentação!
+                <span
+                    style='
+                        animation: local-back-and-forth .6s infinite;
+                        display: inline-block;'
+                >🙂</span>
+            </h1>
+            <p>
+            O código abaixo é editável e executável:
+            </p>
+            <div class='ace-brython'>
+                <script type='text/x.ace-brython'>
+                    print('edit me')
+                </script>
+            </div>
+        </section>
+
+
+
       </div>
     </div>
 
