Add common style for ul and li elements

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -17,6 +17,21 @@
     <link rel="stylesheet" href="../asciinema/asciinema-player.css">
 
     <style>
+        ul {
+            font-size: 1em;
+            margin-top: .5ex;
+            margin-bottom: .5ex;
+        }
+
+        li {
+            margin-top: 1ex;
+            margin-bottom: 1ex;
+        }
+
+        li li {
+            font-size: .9em;
+        }
+
         .reveal .local-grid {
             display: grid;
             grid-auto-flow: column;
