Use python-repl

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -16,6 +16,8 @@
     <!-- asciinema -->
     <link rel="stylesheet" href="../asciinema/asciinema-player.css">
 
+    <link rel="stylesheet" href="python-repl.css">
+
     <style>
         ul {
             font-size: 1em;
@@ -88,6 +90,10 @@
             to {
                 filter: brightness(1) drop-shadow(0 0 10px #fff0);
             }
+        }
+
+        .python-repl {
+            font-size: .6em;
         }
     </style>
   </head>
@@ -519,6 +525,7 @@
     <script src="../plugin/highlight/highlight.js"></script>
     <script src="../plugin/revealjs-ace-brython/dist/main.js"></script>
     <script src="../asciinema/asciinema-player.js"></script>
+    <script src="python-repl.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
