--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -92,6 +92,16 @@
             }
         }
 
+        .ace_marker-layer .ace_active-line {
+            transition: all .2s;
+        }
+        .ace_cursor-layer .ace_cursor {
+            transition: all .2s;
+        }
+        .ace-pastel-on-dark .ace_marker-layer .ace_active-line {
+            background: rgba(255, 255, 255, .1) !important;
+        }
+
         .python-repl {
             font-size: .6em;
         }
