--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -527,6 +527,62 @@
                 })()</script>
             </div>
         </section>
+
+
+        <section>
+            <h4>Vamos começar pelo básico</h4>
+        </section>
+
+
+        <section data-auto-animate>
+            <h3>Expressões</h3>
+        </section>
+        <section data-auto-animate>
+            <h3>Expressões</h3>
+            <p>Um dos tipos mais básicos de instruções da linguagem</p>
+            <div class='python-repl fragment' style='margin-top: 1ex'><!--
+                >>> 10 + 32
+                42
+                >>> 5 * 4 * (3 + 9)
+                240
+                >>> 1 - 1 + 1 - 1
+                0
+                >>> 127
+                127
+            --></div>
+            <p class='fragment'>
+                Combinam <strong>valores</strong> e
+                <strong>operadores</strong>, e possuem como resultado um outro
+                <strong>valor</strong>
+            </p>
+            </ul>
+        </section>
+        <section data-auto-animate>
+            <h3>Expressões</h3>
+            <p>
+                Como para qualquer outra instrução Python, expressões precisam
+                estar bem definidas <strong>sintaticamente</strong>:
+            </p>
+            <div class='python-repl fragment'><!--
+                >>> 20 +
+                  File "<stdin>", line 1
+                    20 +
+                       ^
+                SyntaxError: invalid syntax
+            --></div>
+            <p class='fragment local-standout-box'
+               style='font-size: .8em;'>
+                Diferentemente das linguagens naturais, uma linguagem de
+                programação <strong>requer</strong> o uso estritamente correto
+                de uma sintaxe para que ambas as partes
+                (🤓 e
+                 <img data-src='python-logo.svg'
+                      alt='interpretador Python'
+                      style='height: 1em; display: inline; margin: 0;
+                             vertical-align: middle' />)
+                possam se entender.
+            </p>
+        </section>
       </div>
     </div>
 
