Add more common styles

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -105,6 +105,19 @@
         .python-repl {
             font-size: .6em;
         }
+
+        :not(pre) > code {
+            background-color: #0001;
+            color: #333;
+            padding: .15ex;
+            display: inline-block;
+            border-radius: .1ex;
+        }
+
+        strong {
+            text-transform: uppercase;
+            font-size: .8em;
+        }
     </style>
   </head>
   <body>
