Use <code> instead of <em>

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -610,32 +610,20 @@
                 de execução realizada pelo Python:
                 </p>
                 <ol>
-                    <li>
-                        A <strong>expressão</strong> <em>10 - 2</em> é
+                    <li class='fragment'>
+                        A <strong>expressão</strong> <code>10 - 2</code> é
                         resolvida;
                     </li>
-                    <li>
+                    <li class='fragment'>
                         O resultado é utilizando para resolver a a
-                        <strong>expressão</strong> de multiplicação <em>4 *
-                        ...</em>;
+                        <strong>expressão</strong> de multiplicação <code>4 *
+                        ...</code>;
                     </li>
-                    <li>
+                    <li class='fragment'>
                         Enfim, o resultado é utilizado para resolver a
-                        <strong>expressão</strong> de soma <em>1 + ...</em>,
+                        <strong>expressão</strong> de soma <code>1 + ...</code>,
                         que é a expressão "original"
                     </li>
-                    <script>
-                        for (let el of document.currentScript.parentNode.querySelectorAll('em')) {
-                          el.style = `
-                            color: #4747ff;
-                            background-color: #0001;
-                            padding: .2ex;
-                            font-size: .7em;
-                            font-family: monospace;
-                            font-weight: bold;
-                          `
-                        }
-                    </script>
                 </ol>
             </div>
         </section>
