--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -16,7 +16,7 @@
     <!-- asciinema -->
     <link rel="stylesheet" href="../asciinema/asciinema-player.css">
 
-    <link rel="stylesheet" href="python-repl.css">
+    <link rel="stylesheet" href="python-repl/python-repl.css">
 
     <style>
         ul {
@@ -826,7 +826,7 @@
     <script src="../plugin/highlight/highlight.js"></script>
     <script src="../plugin/revealjs-ace-brython/dist/main.js"></script>
     <script src="../asciinema/asciinema-player.js"></script>
-    <script src="python-repl.js"></script>
+    <script src="python-repl/python-repl.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
