Use a better term instead of "Inclusive"

--- a/slides/index.html
+++ b/slides/index.html
@@ -784,7 +784,7 @@
             </table>
             <p class='fragment'> ... e vários outros! </p>
             <div class='fragment local-standout-box' style='top: 50%'>
-                 Inclusive, podemos criar nossos própios tipos!
+                 Além disso, podemos criar nossos própios tipos!
                  <span
                     style='
                         animation: local-back-and-forth .6s infinite;
