slides: make main.js a module

--- a/slides/index.html
+++ b/slides/index.html
@@ -728,6 +728,6 @@
     <script src="../revealjs-ace-brython/dist/main.js"></script>
     <script src="../asciinema/asciinema-player.js"></script>
     <script src="python-repl/python-repl.js"></script>
-    <script src="main.js"></script>
+    <script type='module' src="main.js"></script>
   </body>
 </html>
