Use reusable for moving face

--- a/slides/index.html
+++ b/slides/index.html
@@ -253,6 +253,7 @@
             <h1 class='r-fit-text'>
                 Podemos também rodar códigos diretamente nesta apresentação!
                 <span
+                    data-reusable='moving-face'
                     style='
                         animation: local-back-and-forth .6s infinite;
                         display: inline-block;'
@@ -262,11 +263,7 @@
         <section data-auto-animate>
             <h1 class='r-fit-text'>
                 Podemos também rodar códigos diretamente nesta apresentação!
-                <span
-                    style='
-                        animation: local-back-and-forth .6s infinite;
-                        display: inline-block;'
-                >🙂</span>
+                <template data-reuse='moving-face'></template>
             </h1>
             <p>
             O código abaixo é editável e executável:
@@ -686,11 +683,7 @@
             <p class='fragment'> ... e vários outros! </p>
             <div class='fragment local-standout-box' style='top: 50%'>
                  Além disso, podemos criar nossos própios tipos!
-                 <span
-                    style='
-                        animation: local-back-and-forth .6s infinite;
-                        display: inline-block;'
-                >🙂</span>
+                 <template data-reuse='moving-face'></template>
             </div>
         </section>
         <section data-auto-animate>
