class-data: add aula04.zip

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <h1>Links:</h1>
           <ul>
             <li><a href='slides/aula04.html'>Slides</a></li>
+            <li><a href='class-data/aula04.zip'>Material gerado em aula</a></li>
           </ul>
         </section>
 
